# hw-1

./: Makefile  README.md
.github/workflows/: makefile.yml
homework-1/: pyproject.toml
homework-1/homework_1/: main.py
