[tool.poetry]
name = "homework-1"
version = "0.1.0"
description = ""
authors = ["a.e.tovmasyan <armantovmasan14@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^6.2.5"
requests = "^2.30.0"
uvicorn = "^0.30.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
